# qtStudy

qmlcpp/: CMakeLists.txt  main.cpp  main.qml  mypainter.cpp  mypainter.h
